# MXS

./: .gitignore  .gitmodules  CHANGELOG.md  NOTICE  NOTICE.md  README.md  pyproject.toml
docs/: architecture.md  firmware-capabilities.md  hardware-debugging.md  hardware-safety.md  migration-0.1-to-0.2.md  migration-0.2.0-to-0.2.1.md  migration-0.2.1-to-0.2.2.md  migration-0.2.2-to-0.2.3.md  migration-0.2.3-to-0.2.4.md  migration-0.2.4-to-0.2.5.md  migration-0.2.5-to-0.2.6.md  performance-0.2.0.md  performance-0.2.1.md  protocol-notes.md  release-readiness-0.2.0.md  release-readiness-0.2.1.md  release-readiness-0.2.2.md  release-readiness-0.2.3.md  release-readiness-0.2.4.md  release-readiness-0.2.5.md  release-readiness-0.2.6.md  source-map.md  upstream-sources.md  x4m200-api-parity.md
examples/: async_messages.py  async_stream.py  baseband_iq.py  capture_iq.py  capture_rf.py  device_files.py  device_info.py  parallel_processing.py  profile_outputs.py  raw_rf.py  sleep_status.py  wire_recording.py  x4driver_getters.py
scripts/: benchmark_parser.py  capture_wire.py  check_api_parity.py  inspect_wire.py
src/mxs/: __init__.py  _version.py  async_device.py  capabilities.py  cli.py  commands.py  constants.py  device.py  diagnostics.py  discovery.py  errors.py  expectations.py  framing.py  message_hub.py  messages.py  models.py  router.py  session.py  transport.py
src/mxs/interfaces/: __init__.py  core.py
src/mxs/processing/: __init__.py  baseband.py  pipeline.py  spectral.py
src/mxs/recording/: __init__.py  legacy.py
src/x4cir/: __init__.py  async_device.py  cli.py  commands.py  constants.py  device.py  diagnostics.py  discovery.py  errors.py  framing.py  messages.py  models.py  recording.py  router.py  session.py  transport.py
tests/: __init__.py  conftest.py  test_cli_live.py  test_cli_parity.py  test_live_failures.py  test_live_safe_api.py  test_message_decoding.py  test_protocol_regressions.py  test_real_device.py  test_recording_processing.py  test_runtime_regressions.py
tests/golden/: test_known_packets.py
tests/golden/fixtures/: device_getters_0_2.mcpbin  device_rf_baseline.mcpbin  device_sleep_baseline.mcpbin  sleep_status.hex
tests/hardware/: conftest.py  test_disconnect.py  test_iq_capture.py  test_probe.py  test_reconnect.py  test_rf_capture.py  test_soak.py  test_stop_manual.py
tests/property/: test_framing_properties.py
tests/unit/: test_api_parity.py  test_async_device.py  test_capabilities.py  test_cli.py  test_commands.py  test_commands_extended.py  test_discovery.py  test_extended_messages.py  test_framing_classic.py  test_framing_noescape.py  test_interfaces.py  test_legacy_recording.py  test_message_hub.py  test_messages.py  test_processing.py  test_recording.py  test_router.py  test_session.py  test_transport_pipeline.py
